--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.4.0",
+    "node-fetch": "^2.6.1",
     "cheerio": "^1.0.0-rc.12"
   },
   "engines": {
