--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "axios": "^1.4.0",
     "node-fetch": "^2.6.1",
+    "puppeteer": "^22.0.0",
     "cheerio": "^1.0.0-rc.12"
   },
   "engines": {
